# strava_poster_builder

./: .env.example  .gitignore  README.md  app.py  app_fastapi.py  main.py  poster_generator.py  pyproject.toml  requirements.txt  setup.py  test_altitude_data.py  test_svg_generation.py  test_svg_generation_simplified.py
project-strava-api/: .env.example  README.md  requirements.txt
project-strava-api/app/: config.py  dependencies.py  main.py
project-strava-api/core/: middleware.py  security.py
project-strava-api/models/: __init__.py  session.py  user.py
project-strava-api/poster/: __init__.py  color_palette.py  formatters.py  poster_generator.py  template_manager.py  visual_components.py
project-strava-api/routers/: __init__.py  activities.py  athlete.py  auth.py  frontend.py  poster.py
project-strava-api/schemas/: auth.py  poster.py  strava.py
project-strava-api/services/: data_processor.py  geocoding_service.py  poster_service.py  strava_service.py  svg_generator.py  user_service.py
project-strava-api/strava/: __init__.py  auth.py  client.py  exceptions.py  models.py
project-strava-api/templates/: auth_page.html  home.html
src/: __init__.py  security.py
src/front/: auth_page.html  home.html
src/strava/: __init__.py  auth_server.py  strava_client.py
