[project]
name = "strava-poster-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.6",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-session>=0.8.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.4",
]
